add trends
